[package]
name = "yorjik"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serenity = { git = "https://github.com/serenity-rs/serenity", features = [
    "collector",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
rand = "0.8.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
reqwest = "0.12.24"
